--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<title>Vite Builds</title>
 </head>
 
-<body>
-	<div id="app"></div>
+<body class="bg-[#18181a] text-white text-[60px]">
+	<h1>Hello Vite!</h1>
+
 	<script type="module" src="/main.js"></script>
 </body>
 
