--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Vite Builds</title>
 </head>
 
-<body class="bg-[#18181a] text-white text-[60px]">
+<body class="">
 	<h1>Hello Vite!</h1>
 
 	<script type="module" src="/main.js"></script>
